# mecatro-P17

./: .gitignore  CMakeLists.txt  README.md
Robot/: AX12.h  AX12_run.cpp  LCD.cpp  LCD.h  US_sensor.cpp  US_sensor.h  kangaroo.cpp  kangaroo.h  main.cpp  ref.cpp
Robot/libs/: README.md
Robot/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  configurations.xml  project.xml
Robot/nbproject/private/: configurations.xml  private.xml  timestamps-192.168.43.156-pi-22  timestamps-192.168.43.46-pi-22
Robot/src/: main.cpp
Robot/src/components/: AX12.h  LCD.cpp  LCD.h  US_sensor.cpp  kangaroo.cpp  kangaroo.h
Robot/src/robot/: Robot.cpp  Robot.h
example/our_examples/kangaroo/: kangaroo.cpp  kangaroo.h
example/our_examples/kangaroo/nbproject/: Package-Release.bash
example/protocol1.0/read_write/: read_write.cpp
example/protocol1.0/read_write/linux_sbc/: read_write
examples/TXD test/: main.cpp
examples/TXD test/nbproject/: Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  project.xml
examples/ax12/: main.cpp
examples/ax12/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
examples/ax12/nbproject/private/: configurations.xml  private.xml  timestamps-rpi-green-pi-22
examples/kangaroo/: kangaroo.cpp  kangaroo.h  kangaroo_fara1.cpp  main.cpp  serialport.cpp  serialport.h
examples/kangaroo/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-variables.mk  Package-Debug.bash  configurations.xml
examples/kangaroo/nbproject/private/: configurations.xml  (+4 more)
examples/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash
examples/nbproject/private/: configurations.xml  private.xml  timestamps-192.168.43.46-pi-22  timestamps-raspberrypi-pi-22
include/components/: AX12.h  AX12_manager.h
kangaroo/: kangaroo.h  serialport.cpp
kangaroo/nbproject/: Makefile-impl.mk  project.xml
kangaroo/nbproject/private/: private.xml
libdxl_build/: Makefile  README.md
libs/BehaviorTree.CPP-master/docs/: tutorial_04_sequence_star.md
libs/dxl_sdk_cpp_source/: README.md
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml  timestamps-192.168.43.237-pi-22
old_examples/: README.md
old_examples/kangaroo/: README.md  main.cpp
src/: AX12.cpp  AX12.h  LCD.cpp  LCD.h  RobotBehaviour.cpp  RobotNodes.cpp  RobotNodes.h  SmallNodes.cpp  SmallNodes.h  SmallRobotBehaviour.cpp  SmallRobotBehaviour.h  kangaroo.cpp  kangaroo.h  main.cpp  main_.cpp  main_LCD.cpp  main_big_robot.cpp  main_kangaroo.cpp  main_small_robot.cpp  main_strategy_test.cpp  serialport.h
src/components/: AX12.cpp  AX12.h  AX12_manager.cpp  Barillet.cpp  Barillet.h  Encoder.cpp  Encoder.h  Jack.cpp  Jack.h  JackBigRobot.cpp  JackBigRobot.h  JackSmallRobot.cpp  JackSmallRobot.h  Kangaroo.cpp  Kangaroo.h  LCD.cpp  LCD.h  Log.cpp  Log.h  RelayModule.cpp  RelayModule.h  RobotBehaviour.cpp  RobotBehaviour.h  SerialPort.cpp  SerialPort.h  UltrasonicSensor.cpp  UltrasonicSensor.h  Ventouse.cpp  Ventouse.h  kangaroo.cpp  kangaroo.h  serialport.cpp
src/robot/: Robot.cpp  Robot.h
src/strategy/: Nodes.cpp  Nodes.h  SmallRobotBehaviour.h  tree_big_robot.xml  tree_big_robot_purple.xml  tree_big_robot_yellow.xml  tree_dev.xml  tree_dev_small_robot.xml  tree_homologation_evitement_big_robot.xml  tree_homologation_score_big_robot.xml  tree_homologation_score_big_robot_purple.xml  tree_small_robot.xml  tree_vider_barillet.xml
src/strategy_test/: dummy_nodes.cpp  dummy_nodes.h  my_tree.xml
(+3 files in other folders)
